newInstance deprecated without getDeclaredConstructor